modules/security_groups/example/security_groups.yaml
AWSTemplateFormatVersion: "2010-09-09"

Description: Create Pubclic and Private Security Groups

Parameters:
  VPCName:
    Description: The name of the VPC being created.
    Type: String
    Default: VPC Public and Private with NAT
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: must be the name of an existing EC2 KeyPair.  
  UserIP:
    Description: The IP address from which SSH access is allowed
    Type: String
    Default: 0.0.0.0/0  # Replace with the specific IP or CIDR block
    
Mappings:
  SubnetConfig:
    VPC:
      CIDR: 10.0.0.0/16
    Public0:
      CIDR: 10.0.0.0/24
    Private0:
      CIDR: 10.0.2.0/24

Resources:
  PublicInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow SSH access from a specific IP
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref UserIP

  PrivateInstanceSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Allow SSH access from the public instance
      VpcId: !ImportValue VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          SourceSecurityGroupId: !Ref PublicInstanceSecurityGroup

Outputs:
  PublicInstanceSecurityGroupId:
    Description: PublicInstanceSecurityGroup Id
    Value: !Ref PublicInstanceSecurityGroup
    Export:
      Name: PublicInstanceSecurityGroupId

  PrivateInstanceSecurityGroupId:
    Description: PrivateInstanceSecurityGroup Id
    Value: !Ref PrivateInstanceSecurityGroup
    Export:
      Name: PrivateInstanceSecurityGroupId
